feat: basic mini tracker window

--- a/src/window/mini-tracker/index.html
+++ b/src/window/mini-tracker/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro Window</title>
+    <title>Tracker Window</title>
   </head>
+  <style>
+    html, body {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <body>
     <script type="module" src="./main.ts"></script>
   </body>
